z-index page-container corrected

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,5 +59,5 @@ a {
 }
 
 .page-container {
-  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent z-50 relative mt-8;
+  @apply max-w-4xl mx-auto px-6 py-12 shadow-md bg-accent relative mt-8;
 }
